--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 header {
-	background-color: #333;
+	background-color: #B0E0E6;
 	color: #7FFF00;
 	padding: 20px;
 	text-align: center;
@@ -27,7 +27,7 @@ img {
 	max-width: 100%;
 }
 button {
-	background-color: #333;
+	background-color: #FF0000;
 	color: #fff;
 	padding: 10px 20px;
 	border: none;
